Refactor: Centralize constants in AgendaConstants and improve code clarity